# pdm_recorder

./: .gitmodules  CMakeLists.txt  README.md
host/: example_trace.vcd  example_vcd_parse.py  requirements.txt
src/: config.xscope  main.c  main.xc
